# Task0

./: .env  alembic.ini  app.py  config.py  docker-compose.yml  pyproject.toml  query_0.json  query_0.py  query_age.py  query_age_diff.json  query_age_diff.py  query_count.json  query_count.py  query_gender.py  rooms_average_age.json  rooms_gender.json
alembic/versions/: 5e42031cf23f_create_students_table.py  9f5947150743_create_rooms_table.py
clients/: postgres.py
